# feature_constraints_controller

./: .gitignore  .hgignore  meshtools.py
analyse_human_observations/: CMakeLists.txt  manifest.xml
analyse_human_observations/launch/: start_constraint_calculator.launch
analyse_human_observations/src/: AnalyseHumanObservations.cpp  AnalysisServer.cpp  HumanObservationAnalyser.cpp
constraint_msgs/msg/: ConstraintCommand.msg  ConstraintConfig.msg  ConstraintState.msg  HLConstraint.msg  HumanObservationInput.msg  MLConstraintHint.msg  SingleHumanObservationInput.msg
fccl_controllers/: CMakeLists.txt  manifest.xml
fccl_controllers/include/fccl_controllers/: Features.h  features.h
fccl_controllers/test/: feature_tests.cpp
fccl_msgs/: manifest.xml
fccl_msgs/msg/: Constraint.msg  Feature.msg  FeatureConstraint.msg  (+8 more)
feature_constraints/: CMakeLists.txt  TODO  manifest.xml
feature_constraints_standalone/: CMakeLists.txt  manifest.xml
feature_constraints_tests/: CMakeLists.txt  mainpage.dox  manifest.xml
feature_constraints_utils/: TODO  arm_reset_new.txt  bodeplot.py  buttons.py  chain_results.py  constraint_dashboard.py  ctrl_viz.py  evaluate_itasc.py  feature_viz.launch  feature_viz.py  kdl_testing.py  manifest.xml  manipulability_ellipsoid.py  msg2service.py  robot.py  robot_kinematics.test  state  tool_utils.py
finger_filter/: finger_filter.py  signal_source.py
force_viz/: README  force_viz.py  manifest.xml  moveable_tf.py  twist_viz.py
human_observation_msgs/: CMakeLists.txt  manifest.xml
ias_mechanism_controllers_calibration/: CMakeLists.txt  manifest.xml
itasc/: CMakeLists.txt  baking.vcg  manifest.xml
itasc/launch/: pr2_config.xml  pr2_joints.launch  pr2_joints.ops  rosie_config.xml  rosie_joints.launch  rosie_joints.ops
itasc/python/itasc/: itasc_helpers.py  itasc_interface.py
itasc/scripts/: baker_model.py  exec_in_dir.sh  pancake_bottle_model_simple.py  spatula_model.py  spatula_model_bremen_1.py  test_limiter.py
itasc/scripts/flipping_demo/: flipping_demo.launch  sim_itasc_test.py
itasc/src/: CMakeLists.txt  ChainTask.cpp  ChainTask.hpp  FeatureTask.cpp  FeatureTask.hpp  FeatureTask2.cpp  FeatureTask2.hpp  ROSLimitAvoider.cpp  ROSLimitAvoider.hpp  ROSObject.cpp  ROSObject.hpp  ROSRobot.cpp  ROSRobot.hpp  Scene.cpp  Scene.hpp  Solver.hpp  SubRobot.hpp  SubTask.hpp  WDLSVelocitySolver.cpp  WDLSVelocitySolver.hpp
joy_to_floats/: TODO  joy_to_floats.py  manifest.xml  mapping.py
joy_to_twist/: joy_to_floats.py  joy_to_twist.py  joy_to_twist_jac.py  manifest.xml  mapping.py
kdl_chain_viz/: CMakeLists.txt  chain_viz.py  kdl_commands.txt  manifest.xml  marker.py
motion_viz/: chain_viz.py  chain_viz2.py  jac_chain_viz.py  left_arm_jac.launch  manifest.xml  marker.py  marker_stress_test.py  moveable_objects.launch  moveable_tf.py  robot_jac.py  tf2pose.py  twist_viz.py
reflexxes_II/: CMakeLists.txt  manifest.xml
reflexxes_tutorial/: CMakeLists.txt  manifest.xml
rosie_controller_manager/: CMakeLists.txt  manifest.xml  rosie_controller_manager.cpp
rosie_env/: rosie_env_test.launch
rtt_constraint_msgs/: CMakeLists.txt  manifest.xml
rtt_motion_viz/: CMakeLists.txt  manifest.xml
rtt_ros_integration_motion_viz/: CMakeLists.txt  manifest.xml
stuff/: TODO  angles.py  arm_reset_new.txt  arm_sensor_response.py  buttons.py  chain_explorer.py  chain_results.txt  constraint_dashboard.py  constraint_debugging.py  constraint_interpreter.py  ctrl_viz.py  feature_viz.launch  feature_viz.py  kdl_testing.py  kill_arm_reset.sh  manifest.xml  obstacle.vcg  range_controller.py  robot.py  robot_kinematics.test  robot_test.py  signal_source.py  sim_itasc_test.py  state  tool_mover.py
(+132 files in other folders)
